DVB subtitles not shown with MPEG-2 TS
Using sample: http://streams.videolan.org/streams/ts/video_subs_ttxt+dvbsub.ts
If choosing the "DVB Subtitles" track, the subtitles are not shown.
Log:
core debug: looking for decoder module matching "any": 40 candidates
avcodec debug: libavcodec codec (DVB Subtitles) started
core debug: using decoder module "avcodec"
avcodec warning: cannot decode one subtitle (4495 bytes)
avcodec warning: cannot decode one subtitle (17 bytes)
avcodec warning: cannot decode one subtitle (17 bytes)
avcodec warning: cannot decode one subtitle (5509 bytes)
avcodec warning: cannot decode one subtitle (4315 bytes)
avcodec warning: cannot decode one subtitle (10199 bytes)
avcodec warning: cannot decode one subtitle (6069 bytes)
avcodec warning: cannot decode one subtitle (17 bytes)
avcodec warning: cannot decode one subtitle (6233 bytes)