Bump DVBsub priority above avcodec

Since now avcodec module accepts dvbsub, it is always taken, even if it
fails to decode...

Close #10655